--- a/style.css
+++ b/style.css
@@ -82,7 +82,6 @@ section{
 }
 
 
-
 .navbar {
 	margin-block: 20px;
 	width: 100%;
@@ -117,13 +116,12 @@ section{
 }
 
 
-
 .projects-grid{
     display: flex;
     justify-content: center;
     gap: 50px;
-    flex-wrap: nowrap;  /* Ensure projects stay in a single row */
-    overflow-x: no;   /* Allow horizontal scrolling if needed */
+    flex-wrap: wrap;  /* Ensure projects stay in a single row */
+    overflow-x: auto;   /* Allow horizontal scrolling if needed */
     padding: 50px 0;    /* Add some padding for better spacing */
 }
 
@@ -152,14 +150,15 @@ section{
 .crateninja img{
 	margin: 0px;
 	height: 270px;
-	width: 300px;
+	width: 100%;
 }
 
 
 
 .flaptofreedom {
     flex: 0 0 auto;  
-    width: 300px; 
+    width: 100%; 
+    max-width: 300px;
     height: 300px;      
     border: 1px solid #ddd;
     border-radius: 5px;
@@ -173,7 +172,7 @@ section{
 .flaptofreedom img{
 	margin: 0px;
 	height: 270px;
-	width: 300px;
+	width: 100%;
 }
 .flaptofreedom h3{
 	color: yellow;
@@ -185,7 +184,8 @@ section{
 
 .skyblaster {
 	flex: 0 0 auto;     
-    width: 300px; 
+    width: 100%; 
+    max-width: 300px;
     height: 300px;      
     border: 1px solid #ddd;
     border-radius: 5px;
@@ -201,7 +201,7 @@ section{
 .skyblaster img{
 	margin: 0px;
 	height: 270px;
-	width: 300px;
+	width: 100%;
 }
 
 .skyblaster h3{
@@ -244,4 +244,37 @@ button{
 }
 button:hover{
 	background-color: #0056b3;
+}
+
+@media (max-width: 768) {
+	h1 {
+		font-size: 32px;
+		margin-top: 0;
+	}
+
+	h2 {
+		font-size: 36px;
+		margin-top: 50px;
+	}
+
+	p {
+		font-size: 14px;
+	}
+
+	section {
+		padding: 100px 20px;
+	}
+
+	.navbar li {
+		font-size: 16px;
+	}
+
+	.projects-grid {
+		flex-direction: column;
+	}
+
+	.crateninja, .flaptofreedom, .skyblaster {
+		width: 90%;
+		margin: 0 auto 30px;
+	}
 }
