--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
-html {
+html{
 	scroll-behavior: smooth;
 }
-body {
+body{
 	margin: 0;
 	padding: 0;
 	background-image: url("Background9.jpg");
@@ -10,20 +10,20 @@ body {
 	background-size: cover;
 	font-family: Verdana, sans-serif;
 }
-h1 {
+h1{
 	text-align: center;
 	font-size: 45px;
 	color: brown;
 	margin-top: -100px;
 	width: 100%;
 }
-h2 {
+h2{
 	text-align: center;
 	font-size: 50px;
 	color: white;
 	margin-top: 150px;
 }
-p {
+p{
 	text-align: center;
 	font-size: 17px;
 	color: white;	
@@ -63,33 +63,25 @@ p {
 
 section{
 	padding: 300px 20px;
-	margin: 0px;
+	margin: 0;
 }
 .section1{
 	height: 100%;
 }
-.section2{
-	padding: 200px;
-	margin: 100px;
-}
-.section3{
-	padding: 200px;
-	margin: 150px;
-}
-.section4{
-	padding: 100px;
-	margin: 100px;
+.section2, .section3, .section4 {
+	padding: 200px 20px;
+	margin: 100px 0;
 }
 
 
-.navbar {
+.navbar{
 	margin-block: 20px;
 	width: 100%;
 	background-color: grey;
 	overflow: hidden;
 	z-index: 1000;
 }
-.navbar ul {
+.navbar ul{
 	list-style-type: none;
 	display: flex;
 	margin: 0;
@@ -97,12 +89,12 @@ section{
 	align-items: center;
 	justify-content: flex-start;
 }
-.navbar li {
+.navbar li{
 	float: left;
 	height: 53px;
 	font-size: 20px;
 }
-.navbar a {
+.navbar a{
 	height: 100%;
 	display: block;
 	text-decoration: none;
@@ -111,7 +103,7 @@ section{
 	align-items: center;
 	padding: 15px;
 }
-.navbar a:hover {
+.navbar a:hover{
 	background-color: darkred;
 }
 
@@ -126,90 +118,36 @@ section{
 }
 
 
-
-.crateninja {
+.crateninja, .flaptofreedom, .skyblaster{
     flex: 0 0 auto;
-    width: 300px; 
-    height: 300px;      
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    overflow: hidden;
-    background: #123123;
-    transition: transform 0.3s;
-}
-.crateninja h3{
-	color: yellow;
-	font-family: cursive;
-	margin-top: 5px;
-	height: 5%;
-	text-align: center;
-}
-.crateninja a{
-	text-decoration: none;
-}
-.crateninja img{
-	margin: 0px;
-	height: 270px;
-	width: 100%;
-}
-
-
-
-.flaptofreedom {
-    flex: 0 0 auto;  
     width: 100%; 
     max-width: 300px;
-    height: 300px;      
+    height: 100%;      
     border: 1px solid #ddd;
     border-radius: 5px;
     overflow: hidden;
-    background: #123123;
+    background: #000000;
     transition: transform 0.3s;
 }
-.flaptofreedom a{
-	text-decoration: none;
-}
-.flaptofreedom img{
-	margin: 0px;
-	height: 270px;
-	width: 100%;
-}
-.flaptofreedom h3{
+.crateninja h3, .flaptofreedom h3, .skyblaster h3{
 	color: yellow;
 	font-family: cursive;
-	margin-top: 5px;
-	height: 5%;
+	font-size: 150%;
+	margin-top: 0px;
+	margin-bottom: 5px;
+	height: 20%;
 	text-align: center;
 }
 
-.skyblaster {
-	flex: 0 0 auto;     
-    width: 100%; 
-    max-width: 300px;
-    height: 300px;      
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    overflow: hidden;
-    background: #123123;
-    transition: transform 0.3s;
-}
-
-.skyblaster a{
-	text-decoration: none;
-}
-
-.skyblaster img{
+.crateninja img, .flaptofreedom img, .skyblaster img{
 	margin: 0px;
-	height: 270px;
+	margin-bottom: -5px;
+	height: 250px;
 	width: 100%;
 }
 
-.skyblaster h3{
-	color: yellow;
-	font-family: cursive;
-	margin-top: 5px;
-	height: 5%;
-	text-align: center;
+.crateninja a, .flaptofreedom a, .skyblaster a{
+	text-decoration: none;
 }
 
 
@@ -246,68 +184,68 @@ button:hover{
 	background-color: #0056b3;
 }
 
-@media (max-width: 768px) {
-	h1 {
+@media (max-width: 768px){
+	h1{
 		font-size: 30px;
 		margin-top: 0;
 	}
 
-	h2 {
+	h2{
 		font-size: 35px;
 		margin-top: 20px;
 	}
 
-	p {
+	p{
 		font-size: 14px;
 	}
 
-	section1, section2, section3, section4 {
+	section{
 		padding: 50px 10px;
 		margin: 0;
 	}
 
-	.navbar li {
+	.navbar li{
 		width: 100%;
 		text-align: center;
 	}
 
-	.navbar ul {
+	.navbar ul{
 		flex-direction: column;
 		align-items: center;
 	}
 
-	.projects-grid {
+	.projects-grid{
 		flex-wrap: wrap;
 		justify-content: center;
 	}
 
-	.crateninja, .flaptofreedom, .skyblaster {
+	.crateninja, .flaptofreedom, .skyblaster{
 		width: 100%;
 		height: auto;
 		padding: 10px;
 	}
 
-	form {
+	form{
 		width: 90%; /* Make form responsive */
 	}
 
-	.form-group {
+	.form-group{
 		margin-bottom: 1em;
 	}
 
-	label {
+	label{
 		font-size: 14px; /* Adjust label size */
 	}
 
-	input, textarea {
+	input, textarea{
 		font-size: 14px; /* Adjust input size */
 	}
 
-	button {
+	button{
 		width: 100%; /* Make button full-width */
 	}
 
-	.section2 p, .section3 p {
+	.section2 p, .section3 p{
 		font-size: 14px; /* Adjust font size for section descriptions */
 		padding: 0 20px; /* Add padding for readability */
 		margin: 0;
