--- a/style.css
+++ b/style.css
@@ -79,9 +79,10 @@ p {
   transform: scale(1.2);
 }
 
+/* Moved all sections further down by increasing the top margin to 100px */
 section {
   padding: 150px 20px;
-  margin: 0;
+  margin-top: 100px;
 }
 
 .navbar {
